# mdict-cli-rs

./: Cargo.toml  README.md  a.lua  server.sh  start_carbonyl.sh
src/: anki.rs  main.rs  mdict_wrapper.rs  spaced_repetition.rs  stardict.rs  utils.rs
src/fsrs/: mod.rs  sqlite_history.rs
