[package]
name = "mdict-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
dirs = "5.0.1"
mdict = "0.1"
tempfile = "3.8.1"
walkdir = "2.4.0"
html_parser = "0.7.0"
rayon = "1.8.0"
scraper = "0.18.1"
ego-tree = "0.6.2"
flate2 = "1.0.34"
eio = "0.1.2"
strsim = "0.11.1"
rusqlite = "0.30.0"
fsrs = "1.3.5"
chrono = { features = ["clock", "serde"], default-features = false, version = "0.4" }
serde = { version = "1", features = ["derive"] }
