[package]
name = "mdict-cli-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
dirs = "5.0.1"
mdict = "0.1"
tempfile = "3.8.1"
walkdir = "2.4.0"
html_parser = "0.7.0"
rayon = "1.8.0"
scraper = "0.18.1"
ego-tree = "0.6.2"
flate2 = "1.0.34"
eio = "0.1.2"
strsim = "0.11.1"
fsrs = { git = "https://github.com/open-spaced-repetition/rs-fsrs" , features = ["serde"] }
chrono = { features = ["clock", "serde"], default-features = false, version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.7"
axum-extra = { version = "0.9.4",  features = ["typed-header"] }
futures = "0.3"
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
shadow-rs = "0"

[build-dependencies]
shadow-rs = "0"
